k8s/userservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice
  labels:
    app: userservice
spec:
  replicas: 1
  template:
    metadata:
      name: userservice
      labels:
        app: userservice
    spec:
      containers:
        - name: userservice
          image: xiongchuanhong/userservice3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              hostPort: 8080
            - containerPort: 8083
              hostPort: 8083
      restartPolicy: Always
  selector:
    matchLabels:
      app: userservice
---
apiVersion: v1
kind: Service
metadata:
  name: userservice
  labels:
    svc: userservice
spec:
  selector:
    app: userservice
  ports:
    - port: 8083
      targetPort: 8083
      name: userservice2
    - port: 8080
      targetPort: 8080
      name: userservice
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: userserviceing
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /userservice
            pathType: Prefix
            backend:
              service:
                name: userservice
                port:
                  number: 8083
